recent-news position corrected | news title overflow added

--- a/css/index.css
+++ b/css/index.css
@@ -475,7 +475,7 @@ footer {
   width: 100%;
 
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -532,6 +532,7 @@ footer {
   font-size: 4vw;
   line-height: 4vw;
   color: black;
+  overflow: hidden;
 }
 
 .recentNewsDesc {
